syntax = "proto3";

option csharp_namespace = "Product";

package product;

import "decimalValue.proto";



service ProductService {
  rpc GetProducts(GetProductsRequest) returns(GetProductsResponse);
}

message GetProductsRequest
{

}

message GetProductsResponse
{
	message Product
	{
		string id = 1;

		string name = 2;

		moneyTypes.DecimalValue bid = 3;

		moneyTypes.DecimalValue ask = 4;
	}
	repeated Product products = 1;
}


